--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --card-content-color: #d0d0d0; /* Lighter off-white/gray color for card content */
   --label-color: #d0d0d0; /* Lighter color for IonLabel text */
   --button-text-color: #ffffff; /* White button text */
+  --ion-toolbar-background: #2a2a2a;
 }
 
 /* Global background and text color for entire app */
@@ -26,6 +27,10 @@ ion-page {
   color: var(--ion-text-color);
 }
 
+ion-content {
+    --offset-top: calc(-100px - env(safe-area-inset-top)) !important;
+}
+
 /* Optional: Tab Bar Styling */
 ion-tab-bar {
   --background: #2a2a2a;
@@ -38,8 +43,7 @@ ion-card,
 ion-card-title,
 ion-card-header,
 ion-card-content,
-card-content,
-ion-label {
+card-content {
   background: black !important;
   color: var(--text-color) !important;
 }
